fix popub button alignment in build

--- a/src/popup.scss
+++ b/src/popup.scss
@@ -17,3 +17,6 @@
  * along with nem2-wallet-browserextension.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+.fixedHeightContainer {
+  height: 400px;
+}
